<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationFragment">

    <Button
        android:id="@+id/button_basic_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/basic_notification_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_basic_notification_with_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/basic_notification_with_icon_button"
        app:layout_constraintEnd_toEndOf="@+id/button_basic_notification"
        app:layout_constraintStart_toStartOf="@+id/button_basic_notification"
        app:layout_constraintTop_toBottomOf="@+id/button_basic_notification" />

    <Button
        android:id="@+id/button_notification_with_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/notification_with_action_button"
        app:layout_constraintEnd_toEndOf="@+id/button_basic_notification"
        app:layout_constraintStart_toStartOf="@+id/button_basic_notification"
        app:layout_constraintTop_toBottomOf="@+id/button_basic_notification_with_icon" />

    <Button
        android:id="@+id/button_notification_with_direct_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/notification_with_direct_reply_button"
        app:layout_constraintEnd_toEndOf="@+id/button_basic_notification"
        app:layout_constraintStart_toStartOf="@+id/button_basic_notification"
        app:layout_constraintTop_toBottomOf="@+id/button_notification_with_action" />

    <Button
        android:id="@+id/button_notification_with_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/notification_with_progress_bar_button"
        app:layout_constraintEnd_toEndOf="@+id/button_basic_notification"
        app:layout_constraintStart_toStartOf="@+id/button_basic_notification"
        app:layout_constraintTop_toBottomOf="@+id/button_notification_with_direct_reply" />
</androidx.constraintlayout.widget.ConstraintLayout>